--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
           <!-- end of home and about  -->
 
           <!-- skills section -->
-          <div id="skills">
-            <h2 class="pt-5">Skills</h2>
-            <div class="space-line"></div>
+          <div id="skills" class="py-5">
+            <h2 class="">Skills</h2>
+            <div class="space-line-light"></div>
 
-            <h5 class="pt-5">Technical Skills</h5>
+            <h5 class="pt-3">Technical Skills</h5>
             <div class="behavior">
               <div class="progress-item d-flex flex-row justify-content-between">
                 <div class="progress mt-3 col-10">
@@ -106,15 +106,79 @@
               </div>
               <div class="progress-item d-flex flex-row justify-content-between">
                 <div class="progress mt-3 col-10">
-                  <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">Html/Css</div>
+                  <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">Html / Css</div>
                 </div>
                 <span class="col-2">&nbsp&nbsp&nbsp65%</span>
               </div>
               <div class="progress-item d-flex flex-row justify-content-between">
                 <div class="progress mt-3 col-10">
-                  <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">SQL</div>
+                  <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">SQL</div>
+                </div>
+                <span class="col-2">&nbsp&nbsp&nbsp60%</span>
+              </div>
+              <div class="progress-item d-flex flex-row justify-content-between">
+                <div class="progress mt-3 col-10">
+                  <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">Figma</div>
+                </div>
+                <span class="col-2">&nbsp&nbsp&nbsp50%</span>
+              </div>
+              <div class="progress-item d-flex flex-row justify-content-between">
+                <div class="progress mt-3 col-10">
+                  <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">Illustrator</div>
+                </div>
+                <span class="col-2">&nbsp&nbsp&nbsp40%</span>
+              </div>
+              <div class="progress-item d-flex flex-row justify-content-between">
+                <div class="progress mt-3 col-10">
+                  <div class="progress-bar" role="progressbar" style="width: 45%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">Bootstrape</div>
+                </div>
+                <span class="col-2">&nbsp&nbsp&nbsp45%</span>
+              </div>
+              <div class="progress-item d-flex flex-row justify-content-between">
+                <div class="progress mt-3 col-10">
+                  <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Python</div>
+                </div>
+                <span class="col-2">&nbsp&nbsp&nbsp20%</span>
+              </div>
+              <div class="progress-item d-flex flex-row justify-content-between">
+                <div class="progress mt-3 col-10">
+                  <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">Tableau</div>
+                </div>
+                <span class="col-2">&nbsp&nbsp&nbsp40%</span>
+              </div>
+              <div class="progress-item d-flex flex-row justify-content-between">
+                <div class="progress mt-3 col-10">
+                  <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">SAP - SD / MM</div>
                 </div>
                 <span class="col-2">&nbsp&nbsp&nbsp70%</span>
+              </div>
+            </div>
+
+            <h5 class="pt-5">Professional Skills</h5>
+            <div class="behavior">
+              <div class="progress-item d-flex flex-row justify-content-between">
+                <div class="progress mt-3 col-10">
+                  <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">Product Management</div>
+                </div>
+                <span class="col-2">&nbsp&nbsp&nbsp70%</span>
+              </div>
+              <div class="progress-item d-flex flex-row justify-content-between">
+                <div class="progress mt-3 col-10">
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Project Management</div>
+                </div>
+                <span class="col-2">&nbsp&nbsp&nbsp80%</span>
+              </div>
+              <div class="progress-item d-flex flex-row justify-content-between">
+                <div class="progress mt-3 col-10">
+                  <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Business Analysis</div>
+                </div>
+                <span class="col-2">&nbsp&nbsp&nbsp75%</span>
+              </div>
+              <div class="progress-item d-flex flex-row justify-content-between">
+                <div class="progress mt-3 col-10">
+                  <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">Marketing & Communication</div>
+                </div>
+                <span class="col-2">&nbsp&nbsp&nbsp65%</span>
               </div>
             </div>
 
@@ -149,36 +213,90 @@
 
             <div class="language mt-5">
               <h5 class="my-3">Languages</h5>
-              <ul>
-                <li><img src="https://cdn.countryflags.com/thumbs/china/flag-round-250.png" alt="Chinese"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></li>
-                <li><img src="https://cdn.countryflags.com/thumbs/united-kingdom/flag-round-250.png" alt="English"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></li>
-                <li><img src="https://cdn.countryflags.com/thumbs/france/flag-round-250.png" alt="French"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i></li>
+              <ul class="d-flex flex-row justify-content-around">
+                <li class="mt-3"><img src="https://cdn.countryflags.com/thumbs/china/flag-round-250.png" alt="Chinese"><br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></li>
+                <li class="mt-3"><img src="https://cdn.countryflags.com/thumbs/united-kingdom/flag-round-250.png" alt="English"><br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></li>
+                <li class="mt-3"><img src="https://cdn.countryflags.com/thumbs/france/flag-round-250.png" alt="French"><br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i></li>
               </ul>
             </div>
           </div>
           <!-- end of skills section -->
 
-            <div class="education">
-              <h4>Education</h4>
-              <p class=year>2008-2009</p>
-              <p class="school">IGR-IAE de Rennes, France</p>
-              <p class="degree">Master’s Degree of International Business Management & Development
-              </p>
-
-              <p class=year>1999-2003</p>
-              <p class="school">Harbin University of Science & Technology, China</p>
-              <p class="degree">Bechelor’s Degree of International Trading & Economy
-              </p>
+          <!-- begin of education section -->
+          <div class="education py-5">
+            <h2>Education</h2>
+            <div class="space-line"></div>
+            <div class="year pt-5"><h6 >2020</h6></div>
+            <div class="edu-info">
+              <h4 class="school">Le Wagon, #batch 441, France</h4>
+              <p class="degree">Fullstack Web developer</p>
             </div>
 
+            <div class="year pt-3"><h6>2009</h6></div>
+            <div class="edu-info">
+              <h4 class="school">IGR-IAE de Rennes, France</h4>
+              <p class="degree">Master’s Degree of International Business Management & Development</p>
+            </div>
+
+            <div class="year pt-3"><h6>2003</h6></div>
+            <div class="edu-info">
+              <h4 class="school">Harbin University of Science & Technology, China</h4>
+              <p class="degree">Bechelor’s Degree of International Trading & Economy</p>
+            </div>
           </div>
+          <!-- end of education section -->
 
 
-        <!-- resume -->
-          <div class="resume">
+        <!-- begin of experiences -->
+          <div class="experiences py-5">
+            <h2>Experiences</h2>
+            <div class="space-line-light"></div>
+            <div class="resume">
+              <h4 class="company">MOTUL</h4>
+              <h4 class= period>01/2018 - 09/2019</h4>
+              <p>Purchaser & Product manager for off-line Marketing & Communication Material (Corp. Communication Dp)</p>
 
+              <h4 class="company">CRITEO</h4>
+              <h6 class="period">01/2011 - 06/2014</h6>
+              <p>Experiment Purchasing Management (Corporate Procurement DP.)</p>
+
+              <h4 class="company">YVES SALOMON FOURREUR</h4>
+              <h6 class="period">06/2014 - 12/2017</h6>
+              <p>Purchasing & Production Coordinator (Production DP.)</p>
+
+              <h4 class="company">URBAHIA</h4>
+              <h6 class="period">04/2009 - 12/2010</h6>
+              <p>Purchasing & Production Coordinator</p>
+
+              <h4 class="company">EURAPAC TRADING COMPANY</h4>
+              <h6 class="period">07/2006 - 06/2008</h6>
+              <p>Sourcing & Purchasing Manager</p>
+
+              <h4 class="company">WESSCO INTERNATION</h4>
+              <h6 class="period">08/2004 - 06/2006</h6>
+              <p>Project Coordinator</p>
+
+              <h4 class="company">JOHNSON CORPORATION</h4>
+              <h6 class="period">07/2003 - 06/2004</h6>
+              <p>Sales Representative for European Market</p>
+
+            </div>
           </div>
         <!-- end experience -->
+
+        <!-- begin of projects -->
+          <div class="experiences py-5">
+            <h2>Experiences</h2>
+            <div class="space-line"></div>
+          </div>
+        <!-- end of projects -->
+
+        <!-- begin of contacts -->
+          <div class="experiences py-5">
+            <h2>Experiences</h2>
+            <div class="space-line"></div>
+          </div>
+        <!-- end of contacts -->
 
     </div>
     <script src="main.js"></script>
