--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Yizhu ZONG : Full-stack developer reconvert from buyer </title>
+    <title>Yizhu ZONG : Full-stack developer reconverted from a professional buyer </title>
     <meta name="description" content="On-line CV of Yizhu ZONG.">
     <meta charset="utf-8">
-    <meta name="description" content="Passionate Product Manager & Professional buyer">
+    <meta name="description" content="A former buyer, now coming back as a Full-stack web developer equiped with Ruby on rails.">
     <!-- <link rel="stylesheet" href="src/application.scss"> -->
     <link rel="shortcut icon" href="#"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
