add reposive for phone ipad

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <!-- <link rel="stylesheet" href="src/application.scss"> -->
     <link rel="shortcut icon" href="#"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,500;0,600;1,300;1,500;1,600&family=Maven+Pro:wght@400;600&family=Poppins:ital,wght@0,100;0,200;0,500;0,600;0,700;0,900;1,600&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- navbar wagon style with dropdown -->
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-      <a class="navbar-brand" href="#home">
+      <a class="navbar-brand" href="https://agnes-lain.github.io/cv_yizhu_zong/">
         <i class="fas fa-terminal"></i> YIZHU ZONG
       </a>
 <!--       <ul class="navbar-nav mr-3">
@@ -46,10 +47,10 @@
     </div>
     <!-- end of hiding slide -->
 
-    <div class="container">
-      <div class="row">
+    <div class="content-container">
+      <div class="content-row">
         <!-- profile photo -->
-        <div class="col-lg-4 col-sm-12 d-flex flex-column profile" >
+        <div class=" profile" >
           <div class="profile-photo" style="background-image: linear-gradient(rgba(246, 219, 188, 0.3),rgba(246, 219, 188, 0.3)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1600302866/cv%20element/Yizhu_Zong_2_z0haby.jpg')">
 
           </div>
@@ -62,7 +63,7 @@
         <!-- end profile photo -->
 
         <!-- main title section-->
-        <div class="title col-lg-8 col-sm-12">
+        <div class="title ">
 
           <!-- home and about -->
           <div class="intro" id="home">
