--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </div>
 
           <div class="about" id="about-me">
-            <h2 class="pt-5">About</h2>
+            <h2 >About</h2>
             <div class="space-line"></div>
             <p class="pt-3">
               Freshly certificated as a junior Full-stack Ruby-on-rail developer from le Wagon summer coding bootcamp #batch-441.
@@ -87,7 +87,7 @@
           <!-- end of home and about  -->
 
           <!-- skills section -->
-          <div id="skills" class="py-5">
+          <div id="skills">
             <h2 class="">Skills</h2>
             <div class="space-line-light"></div>
 
@@ -241,7 +241,7 @@
           <!-- end of skills section -->
 
           <!-- begin of education section -->
-          <div id="education" class="py-5">
+          <div id="education">
             <h2>Education</h2>
             <div class="space-line"></div>
             <div class="year pt-5"><h6 >2020</h6></div>
@@ -266,7 +266,7 @@
 
 
         <!-- begin of experiences -->
-          <div id="experiences" class="py-5">
+          <div id="experiences">
             <h2>Experiences</h2>
             <div class="space-line-light"></div>
             <div class="resume pt-3">
@@ -382,16 +382,16 @@ machinery department, plus all kinds of home-electric-appliance, and other house
         <!-- end experience -->
 
         <!-- begin of projects -->
-          <div class="experiences py-5">
+          <div id="projects">
             <h2>Projects</h2>
             <div class="space-line"></div>
           </div>
         <!-- end of projects -->
 
         <!-- begin of contacts -->
-          <div class="experiences py-5">
+          <div id="contacts">
             <h2>Contact</h2>
-            <div class="space-line"></div>
+            <div class="space-line-light"></div>
           </div>
         <!-- end of contacts -->
 
