--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       </a>
 <!--       <ul class="navbar-nav mr-3">
         <li class="nav-item "> -->
-      <div class="toggle-holder">
+      <div class="toggle-holder"><a href="#">
         <div id="toggle" class="mr-3">
           <div></div>
           <div></div>
           <div></div>
-        </div>
+        </div></a>
       </div>
 <!--         </li>
       </ul> -->
@@ -386,6 +386,32 @@ machinery department, plus all kinds of home-electric-appliance, and other house
             <h2>Projects</h2>
             <div class="space-line"></div>
           </div>
+          <div id="project1">
+            <a href="http://www.commithood.com" target="_blank"><div class="project-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601150597/commithood-square_tbt70d.png')"></div></a>
+            <div class="project-info">
+              <p>Make a commitment to improve your neighborhood a good common space to live. </p>
+              <p>Commit'hood is a platform we coded as the final project during Le wagon bootcamp, which allows you to find all the associative events close to you.</p>
+            </div>
+          </div>
+
+          <div id="project2">
+            <div class="project2-info">
+              <p>Creat your own cocktail collection and recipes!</p>
+              <p>The first Rails application I've built within 2 days. Not totally functional, but it's a good beginning ✌️.</p>
+            </div>
+            <a href="https://cocktail-lovers-2046.herokuapp.com" target="_blank"><div class="project2-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601160992/cocktail_lover_m_qowyr6.png')"></div></a>
+          </div>
+
+
+          <div id="project3">
+            <a href="https://bikery.herokuapp.com" target="_blank"><div class="project3-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601161006/bikery_m_e9hy2t.png')"></div></a>
+            <div class="project3-info">
+              <p>F*ck the cars and rent your bike today! </p>
+              <p>Bikery was an Airbnb market place clone project I coded with 3 teamates, and it's the first project we learnt to code with others as co-op ;) 🙌 </p>
+            </div>
+          </div>
+
+          <div class="project-footer"></div>
         <!-- end of projects -->
 
         <!-- begin of contacts -->
