--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,500;0,600;1,300;1,500;1,600&family=Maven+Pro:wght@400;600&family=Poppins:ital,wght@0,100;0,200;0,500;0,600;0,700;0,900;1,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,500;0,600;1,300;1,500;1,600&family=Maven+Pro:wght@400;700&family=Poppins:ital,wght@0,100;0,200;0,500;0,600;0,700;0,900;1,600&display=swap" rel="stylesheet">
     <!-- Hotjar Tracking Code for https://agnes-lain.github.io/cv_yizhu_zong/ -->
     <script>
         (function(h,o,t,j,a,r){
@@ -49,10 +49,10 @@
       <ul>
         <li><a href="#home" class="">Home</a></li>
         <li class="mt-3"><a href="#about-me" class="">About</a></li>
-        <li class="mt-3"><a href="#skills" class="">Skills</a></li>
-        <li class="mt-3"><a href="#education" class="">Education</a></li>
-        <li class="mt-3"><a href="#experiences" class="">Experiences</a></li>
         <li class="mt-3"><a href="#projects" class="">Projects</a></li>
+        <li class="mt-3"><a href="#education" class="">Education</a></li>
+        <li class="mt-3"><a href="#skills" class="">Skills</a></li>
+        <li class="mt-3"><a href="#experiences" class="">Experiences</a></li>
         <li class="mt-3"><a href="#contact" class="">Contact</a></li>
       </ul>
     </div>
@@ -88,13 +88,14 @@
           <div class="about" id="about-me">
             <h2 >About</h2>
             <div class="space-line"></div>
-            <p class="pt-3">
-              Freshly certificated as a junior Full-stack Ruby-on-rail developer from le Wagon summer coding bootcamp #batch-441.
-              I am curious, passionate, empathic, pragmatic and autonomous, a fast learner with full energy, self-motivated and performance-driven type!
+            <p class="mt-5">
+              Freshly certificated as a junior <strong>Full-stack developer</strong> from le Wagon summer coding bootcamp #batch-441. After 15 years of professional experience in international business development field as a buyer, I wanted to make a change of my career, to learn new skills and to follow my passion of internet technologies. Start over from zero is not a simple decision, but a new adventure is always very exciting to me, and learning new things keeps me young and fresh!
             </p>
             <p>
-              I have 15 years of professional experiences in international business development fields as a buyer. Now I choose to learn coding to reconvert myself with a new career path, in order to follow my passion for technologies, and to work with startup spirit!
+              I am curious, passionate, empathic, pragmatic and autonomous, a fast learner with full energy, self-motivated and performance-driven type! And I believe my mixed experiences from different industries can bring you extra values.
             </p>
+            <p>I also love : ✈️ 🎒 🌏 🍜 🍻 🍕 🍱 🎶 🎧 🎸 🧘🏻‍♀️🚂 🏖 🎮 🚲 🕹 🍷 🏓 🎤 🏔 🎿 🐳</p>
+
           </div>
           <!-- end of home and about  -->
 
@@ -118,7 +119,6 @@
             </div>
             <a href="https://cocktail-lovers-2046.herokuapp.com" target="_blank"><div class="project2-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601160992/cocktail_lover_m_qowyr6.png')"></div></a>
           </div>
-
 
           <div id="project3">
             <a href="https://bikery.herokuapp.com" target="_blank"><div class="project3-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601161006/bikery_m_e9hy2t.png')"></div></a>
@@ -160,29 +160,19 @@
             <h2 class="">Skills</h2>
             <div class="space-line-light"></div>
 
-            <h5 class="mt-5">Languages</h5>
-            <div class="language mt-3">
-              <ul class="d-flex flex-row justify-content-around">
-                <li class="mt-3"><img src="https://cdn.countryflags.com/thumbs/china/flag-round-250.png" alt="Chinese"><br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></li>
-                <li class="mt-3"><img src="https://cdn.countryflags.com/thumbs/united-kingdom/flag-round-250.png" alt="English"><br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></li>
-                <li class="mt-3"><img src="https://cdn.countryflags.com/thumbs/france/flag-round-250.png" alt="French"><br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></li>
-              </ul>
-            </div>
             <br>
-            <ul class="nav nav-pills my-4" id="pills-tab" role="tablist">
+            <ul class="nav nav-tabs my-4" id="myTab" role="tablist">
               <li class="nav-item" role="presentation">
-                <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true"><h5>Technical Skills</h5></a>
+                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#tech-skills" role="tab" aria-controls="home" aria-selected="true"><h5>Technical Skills</h5></a>
               </li>
               <li class="nav-item" role="presentation">
-                <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false"><h5>Professional Skills</h5></a>
+                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#pro-skills" role="tab" aria-controls="profile" aria-selected="false"><h5>Professional Skills</h5></a>
               </li>
-<!--               <li class="nav-item" role="presentation">
-                <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Buyer</a>
-              </li> -->
             </ul>
-            <div class="tab-content my-5" id="pills-tabContent">
+
+            <div class="tab-content my-5" id="MyTabContent">
               <!-- skills show for technical -->
-              <div class="tab-pane ml-5 fade show active d-flex flex-wrap" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+              <div class="tab-pane ml-5 fade show active d-flex flex-wrap" id="tech-skills" role="tabpanel" aria-labelledby="home-tab">
                 <div class="skill-tab mr-3 mb-3"><svg class="mr-2" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#9B1010" d="M42 14L40 40 14 42z"/><path fill="#B71C1C" d="M28 28L40 40 42 14z"/><path fill="#C62828" d="M24 12.336A22.621 11.664 0 1 0 24 35.664A22.621 11.664 0 1 0 24 12.336Z" transform="rotate(-45.001 24 24)"/><path fill="#E53935" d="M10 17L17 10 25 6 31 10 28 19 19 27 10 30 6 24z"/><path fill="#FF5252" d="M31,10l-6-4h11L31,10z M42,15l-11-5l-3,9L42,15z M19,27l13.235,5.235L28,19L19,27z M10,30l4,12l5-15L10,30z M6,24v11l4-5L6,24z"/></svg>Ruby</div>
                 <div class="skill-tab mr-3 mb-3"><svg class="mr-2" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#9B1010" d="M42 14L40 40 14 42z"/><path fill="#B71C1C" d="M28 28L40 40 42 14z"/><path fill="#C62828" d="M24 12.336A22.621 11.664 0 1 0 24 35.664A22.621 11.664 0 1 0 24 12.336Z" transform="rotate(-45.001 24 24)"/><path fill="#E53935" d="M10 17L17 10 25 6 31 10 28 19 19 27 10 30 6 24z"/><path fill="#FF5252" d="M31,10l-6-4h11L31,10z M42,15l-11-5l-3,9L42,15z M19,27l13.235,5.235L28,19L19,27z M10,30l4,12l5-15L10,30z M6,24v11l4-5L6,24z"/></svg>Ruby on rails</div>
                 <div class="skill-tab mr-3 mb-3"><svg class="mr-2" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#ffd600" d="M6,42V6h36v36H6z"/><path fill="#000001" d="M29.538 32.947c.692 1.124 1.444 2.201 3.037 2.201 1.338 0 2.04-.665 2.04-1.585 0-1.101-.726-1.492-2.198-2.133l-.807-.344c-2.329-.988-3.878-2.226-3.878-4.841 0-2.41 1.845-4.244 4.728-4.244 2.053 0 3.528.711 4.592 2.573l-2.514 1.607c-.553-.988-1.151-1.377-2.078-1.377-.946 0-1.545.597-1.545 1.377 0 .964.6 1.354 1.985 1.951l.807.344C36.452 29.645 38 30.839 38 33.523 38 36.415 35.716 38 32.65 38c-2.999 0-4.702-1.505-5.65-3.368L29.538 32.947zM17.952 33.029c.506.906 1.275 1.603 2.381 1.603 1.058 0 1.667-.418 1.667-2.043V22h3.333v11.101c0 3.367-1.953 4.899-4.805 4.899-2.577 0-4.437-1.746-5.195-3.368L17.952 33.029z"/></svg>Javascript</div>
@@ -194,12 +184,15 @@
                 <div class="skill-tab mr-3 mb-3"><svg class="mr-2" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#0277BD" d="M24.047,5c-1.555,0.005-2.633,0.142-3.936,0.367c-3.848,0.67-4.549,2.077-4.549,4.67V14h9v2H15.22h-4.35c-2.636,0-4.943,1.242-5.674,4.219c-0.826,3.417-0.863,5.557,0,9.125C5.851,32.005,7.294,34,9.931,34h3.632v-5.104c0-2.966,2.686-5.896,5.764-5.896h7.236c2.523,0,5-1.862,5-4.377v-8.586c0-2.439-1.759-4.263-4.218-4.672C27.406,5.359,25.589,4.994,24.047,5z M19.063,9c0.821,0,1.5,0.677,1.5,1.502c0,0.833-0.679,1.498-1.5,1.498c-0.837,0-1.5-0.664-1.5-1.498C17.563,9.68,18.226,9,19.063,9z"/><path fill="#FFC107" d="M23.078,43c1.555-0.005,2.633-0.142,3.936-0.367c3.848-0.67,4.549-2.077,4.549-4.67V34h-9v-2h9.343h4.35c2.636,0,4.943-1.242,5.674-4.219c0.826-3.417,0.863-5.557,0-9.125C41.274,15.995,39.831,14,37.194,14h-3.632v5.104c0,2.966-2.686,5.896-5.764,5.896h-7.236c-2.523,0-5,1.862-5,4.377v8.586c0,2.439,1.759,4.263,4.218,4.672C19.719,42.641,21.536,43.006,23.078,43z M28.063,39c-0.821,0-1.5-0.677-1.5-1.502c0-0.833,0.679-1.498,1.5-1.498c0.837,0,1.5,0.664,1.5,1.498C29.563,38.32,28.899,39,28.063,39z"/></svg>Python</div>
                 <div class="skill-tab mr-3 mb-3"><img class="mr-2" src="./src/media/icons8-sql-48.png" alt="">SQL</div>
                 <div class="skill-tab mr-3 mb-3"><img class="mr-2" src="./src/media/icons8-sap-48.png" alt="">SAP</div>
-                <div class="skill-tab mr-3 mb-3"><img class="mr-2" src="./src/media/icons8-tableau-software-48.png" alt="">Tableau</div>
+                <div class="skill-tab mr-3 mb-3"><img class="mr-2" src="./src/media/icons8-tableau-software-48.png" alt="Tableau">Tableau</div>
+                <div class="skill-tab mr-3 mb-3"><img class="mr-2" src="https://img.icons8.com/color/48/000000/jira.png" alt="Jira">Jira</div>
+                <div class="skill-tab mr-3 mb-3"><img class="mr-2" src="https://img.icons8.com/fluent/48/000000/confluence.png" alt="Confluence">Confluence</div>
+
               </div>
               <!-- end web dev skill -->
 
               <!-- skill show for professional skills -->
-              <div class="tab-pane fade ml-5 d-flex flex-wrap" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+              <div class="tab-pane fade ml-5 d-flex flex-wrap" id="pro-skills" role="tabpanel" aria-labelledby="profile-tab">
                 <div class="skill-tab mr-3 mb-3">Product Development</div>
                 <div class="skill-tab mr-3 mb-3">Communication</div>
                 <div class="skill-tab mr-3 mb-3">Project Management</div>
@@ -213,13 +206,20 @@
                 <div class="skill-tab mr-3 mb-3">Marketing Research</div>
               </div>
               <!-- end skill show for product management -->
-
+            </div>
+            <br>
+            <h5 class="mb-4">Languages</h5>
+            <div class="language my-3">
+              <ul class="d-flex flex-row justify-content-around">
+                <li class="mt-3"><img src="https://cdn.countryflags.com/thumbs/china/flag-round-250.png" alt="Chinese"><br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></li>
+                <li class="mt-3"><img src="https://cdn.countryflags.com/thumbs/united-kingdom/flag-round-250.png" alt="English"><br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></li>
+                <li class="mt-3"><img src="https://cdn.countryflags.com/thumbs/france/flag-round-250.png" alt="French"><br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></li>
+              </ul>
             </div>
 
-
             <br>
-            <h5>Professional Behaviors</h5>
-            <div class="behavior pt-3">
+            <h5 class="my-4">Professional Behaviors</h5>
+            <div class="behavior pt-3 ml-5">
               <div class="progress-item d-flex flex-row justify-content-between">
                 <div class="progress mt-3 col-10">
                   <div class="progress-bar" role="progressbar" style="width: 81%" aria-valuenow="81" aria-valuemin="0" aria-valuemax="100">Enterprising, triggers innovations</div>
@@ -511,11 +511,105 @@ machinery department, plus all kinds of home-electric-appliance, and other house
           <div id="contacts">
             <h2>Contact</h2>
             <div class="space-line-light"></div>
+            <br>
+
+            <div class="profile-follow-light d-flex flex-row justify-content-around pt-4">
+              <a href="mailto: agnes.lain@gmail.com"><i class="fas fa-envelope"></i> agnes.lain@gmail.com</a>
+              <a href="tel:+33678559761"><i class="fas fa-phone-square"></i> +33 (0)6.78.55.97.61</a>
+            </div>
+
+            <!-- jotform embed from here  -->
+            <iframe
+              id="JotFormIFrame-202776857929071"
+              title="contact form"
+              onload="window.parent.scrollTo(0,0)"
+              allowtransparency="true"
+              allowfullscreen="true"
+              allow="geolocation; microphone; camera"
+              src="https://form.jotform.com/202776857929071"
+              frameborder="0"
+              style="
+              min-width: 100%;
+              height:539px;
+              border:none;"
+              scrolling="no"
+            >
+            </iframe>
+            <script type="text/javascript">
+              var ifr = document.getElementById("JotFormIFrame-202776857929071");
+              if(window.location.href && window.location.href.indexOf("?") > -1) {
+                var get = window.location.href.substr(window.location.href.indexOf("?") + 1);
+                if(ifr && get.length > 0) {
+                  var src = ifr.src;
+                  src = src.indexOf("?") > -1 ? src + "&" + get : src  + "?" + get;
+                  ifr.src = src;
+                }
+              }
+              window.handleIFrameMessage = function(e) {
+                if (typeof e.data === 'object') { return; }
+                var args = e.data.split(":");
+                if (args.length > 2) { iframe = document.getElementById("JotFormIFrame-" + args[(args.length - 1)]); } else { iframe = document.getElementById("JotFormIFrame"); }
+                if (!iframe) { return; }
+                switch (args[0]) {
+                  case "scrollIntoView":
+                    iframe.scrollIntoView();
+                    break;
+                  case "setHeight":
+                    iframe.style.height = args[1] + "px";
+                    break;
+                  case "collapseErrorPage":
+                    if (iframe.clientHeight > window.innerHeight) {
+                      iframe.style.height = window.innerHeight + "px";
+                    }
+                    break;
+                  case "reloadPage":
+                    window.location.reload();
+                    break;
+                  case "loadScript":
+                    var src = args[1];
+                    if (args.length > 3) {
+                        src = args[1] + ':' + args[2];
+                    }
+                    var script = document.createElement('script');
+                    script.src = src;
+                    script.type = 'text/javascript';
+                    document.body.appendChild(script);
+                    break;
+                  case "exitFullscreen":
+                    if      (window.document.exitFullscreen)        window.document.exitFullscreen();
+                    else if (window.document.mozCancelFullScreen)   window.document.mozCancelFullScreen();
+                    else if (window.document.mozCancelFullscreen)   window.document.mozCancelFullScreen();
+                    else if (window.document.webkitExitFullscreen)  window.document.webkitExitFullscreen();
+                    else if (window.document.msExitFullscreen)      window.document.msExitFullscreen();
+                    break;
+                }
+                var isJotForm = (e.origin.indexOf("jotform") > -1) ? true : false;
+                if(isJotForm && "contentWindow" in iframe && "postMessage" in iframe.contentWindow) {
+                  var urls = {"docurl":encodeURIComponent(document.URL),"referrer":encodeURIComponent(document.referrer)};
+                  iframe.contentWindow.postMessage(JSON.stringify({"type":"urls","value":urls}), "*");
+                }
+              };
+              if (window.addEventListener) {
+                window.addEventListener("message", handleIFrameMessage, false);
+              } else if (window.attachEvent) {
+                window.attachEvent("onmessage", handleIFrameMessage);
+              }
+              </script>
+                  </div>
+                <!-- end of contacts -->
+            <!-- jotform embed endup here  -->
+
+<!--             <iframe id="inlineFrameExample"
+              title="Inline Frame Example"
+              width="300"
+              height="200"
+              src="https://bikery.herokuapp.com">
+            </iframe> -->
           </div>
-        <!-- end of contacts -->
 
     </div>
     <script src="main.js"></script>
+    <!-- <script type="text/javascript" src="https://form.jotform.com/jsform/202776857929071"></script> -->
    <!--  <script src="https://unpkg.com/@popperjs/core@2"></script> -->
   </body>
 </html>
