--- a/index.html
+++ b/index.html
@@ -257,6 +257,8 @@
           <div id="experiences">
             <h2>Experiences</h2>
             <div class="space-line"></div>
+            <br>
+            <h5 class="text-center">👇 Click each for details 💡 </h5>
             <div class="resume pt-3">
 
               <div class="exp-space"></div>
@@ -265,7 +267,7 @@
                 <img class="leftside" src="https://d23zpyj32c5wn3.cloudfront.net/images/masonry_bricks/pictures/56862/big/DSC_9397.jpg?1567756925" alt="Motul">
                 <div class="exp-description-right">
                   <div class= "end pl-2"><h6>09 - 2019 </h6></div>
-                  <div class="pl-4 exp-title"><p>Purchasing & Product Manager</p></div>
+                  <div class="ml-4 exp-title exp-btn"><p>Purchasing & Product Manager</p></div>
                   <div class= "begin pl-2"><h6>01 - 2018</h6></div>
                 </div>
               </div>
@@ -595,7 +597,7 @@ machinery department, plus all kinds of home-electric-appliance, and other house
                 window.attachEvent("onmessage", handleIFrameMessage);
               }
               </script>
-                  </div>
+                </div>
                 <!-- end of contacts -->
             <!-- jotform embed endup here  -->
 
@@ -605,7 +607,7 @@ machinery department, plus all kinds of home-electric-appliance, and other house
               height="200"
               src="https://bikery.herokuapp.com">
             </iframe> -->
-          </div>
+
 
     </div>
     <script src="main.js"></script>
