--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Yizhu ZONG : Full-stack developer reconverted from a professional buyer </title>
-    <meta name="description" content="On-line CV of Yizhu ZONG.">
-    <meta charset="utf-8">
+    <title>Yizhu ZONG : Full-stack developer with Ruby on Rails</title>
     <meta name="description" content="A former buyer, now coming back as a Full-stack web developer equiped with Ruby on rails.">
+    <meta property="og:title" content="Yizhu ZONG : Full-stack developer with Ruby on Rails">
+    <meta property="og:image" content="https://res.cloudinary.com/diczuc7me/image/upload/v1601936968/yizhu_fzxaki.png">
+    <meta property="og:description" content="A former buyer, now coming back as a Full-stack web developer equiped with Ruby on rails.">
+    <meta property="og:site_name" content="Yizhu ZONG"/>
     <!-- <link rel="stylesheet" href="src/application.scss"> -->
     <link rel="shortcut icon" href="#"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -81,7 +83,7 @@
           <div class="intro" id="home">
             <div class="intro-text">
               <h1 class=""> Hello, I'm<br> Yizhu Zong </h1>
-              <p class="introduction">A former buyer, now coming back as a <strong> Full-stack web developer </strong> equiped with <i class="fas fa-gem"></i> Ruby on rails, <i class="fab fa-js"></i> javascript, <i class="far fa-file-code"></i> HTML, <i class="fab fa-css3"></i> CSS, <i class="fab fa-bootstrap"></i> Bootstrap, and more...</p>
+              <p class="introduction">A former buyer, now coming back as a <strong> Full-stack web developer </strong> equipped with <i class="fas fa-gem"></i> Ruby on rails, <i class="fab fa-js"></i> javascript, <i class="far fa-file-code"></i> HTML, <i class="fab fa-css3"></i> CSS, <i class="fab fa-bootstrap"></i> Bootstrap, and more...</p>
             </div>
           </div>
 
@@ -103,32 +105,33 @@
           <div id="projects">
             <h2>Projects</h2>
             <div class="space-line-light"></div>
-          </div>
-          <div id="project1">
-            <a href="http://www.commithood.com" target="_blank"><div class="project-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601150597/commithood-square_tbt70d.png')"></div></a>
-            <div class="project-info">
-              <p>Make a commitment to improve your neighborhood a good common space to live 🌈. </p>
-              <p>Commit'hood is a platform we coded as the final project during Le wagon bootcamp, which allows you to find all the associative events close to you.</p>
-            </div>
-          </div>
 
-          <div id="project2">
-            <div class="project2-info">
-              <p>Creat your own cocktail collection and recipes!</p>
-              <p>The first Rails application I've built within 2 days. Not totally functional, but it's a good beginning ✌️.</p>
+            <div id="project1" class="mt-5">
+              <a href="http://www.commithood.com" target="_blank"><div class="project-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601938428/commit_hood_full_voxana.png')"></div></a>
+              <div id="project1-info">
+                <p>Make a commitment to improve your neighborhood a good common space to live 🌈. </p>
+                <p>Commit'hood is a platform we coded as the final project during Le wagon bootcamp, which allows you to find all the associative events close to you.</p>
+              </div>
             </div>
-            <a href="https://cocktail-lovers-2046.herokuapp.com" target="_blank"><div class="project2-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601160992/cocktail_lover_m_qowyr6.png')"></div></a>
-          </div>
 
-          <div id="project3">
-            <a href="https://bikery.herokuapp.com" target="_blank"><div class="project3-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601161006/bikery_m_e9hy2t.png')"></div></a>
-            <div class="project3-info">
-              <p>F*ck the cars and rent your bike today! </p>
-              <p>Bikery was an Airbnb market place clone project I coded with 3 teamates, and it's the first project we learnt to code with others as co-op ;) 🙌 </p>
+            <div id="project2" class="mt-5">
+              <a href="https://cocktail-lovers-2046.herokuapp.com" target="_blank"><div class="project2-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601938428/cocktail_2046_fswrva.png')"></div></a>
+              <div id="project2-info">
+                <p>Creat your own cocktail collection and recipes!</p>
+                <p>The first Rails application I've built within 2 days. Not totally functional, but it's a good beginning ✌️.</p>
+              </div>
             </div>
-          </div>
 
-          <div class="project-footer"></div>
+            <div id="project3" class="mt-5">
+              <a href="https://bikery.herokuapp.com" target="_blank"><div class="project3-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601938428/bikery_full_hxwbcw.png')"></div></a>
+              <div id="project3-info">
+                <p>F*ck the cars and rent your bike today! </p>
+                <p>Bikery was an Airbnb market place clone project I coded with 3 teamates, and it's the first project we learnt to code with others as co-op ;) 🙌 </p>
+              </div>
+            </div>
+
+          </div>
+          <!-- <div class="project-footer"></div> -->
           <!-- end of projects -->
 
           <!-- begin of education section -->
@@ -219,7 +222,7 @@
 
             <br>
             <h5 class="my-4">Professional Behaviors</h5>
-            <div class="behavior pt-3 ml-5">
+            <div class="behavior pt-3 ml-3">
               <div class="progress-item d-flex flex-row justify-content-between">
                 <div class="progress mt-3 col-10">
                   <div class="progress-bar" role="progressbar" style="width: 81%" aria-valuenow="81" aria-valuemin="0" aria-valuemax="100">Enterprising, triggers innovations</div>
@@ -344,16 +347,16 @@
                     <h6 class="period py-3">France: Jan. 2018 - Sept. 2019</h6>
                     <p class="pb-3"><a href="https://www.motul.com"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/Motul_logo.svg/1280px-Motul_logo.svg.png" alt="Motul">
     Premium lubricant manufacturer</a></p>
-                    <p><i class="fas fa-terminal"></i> Full responsibility to create and manage the off-line Mkt Com. catalogue <strong>(over 140 products)</strong> to support company’s
+                    <p><i class="fas fa-terminal"></i> Full responsibility to develop and manage the off-line Mkt Com. catalogue <strong>(over 140 products)</strong> to support company’s
     global marketing needs, covering point of sales, sport/expo events, trade marketing promotion, lifestyle merchandising;
                     </p>
                     <br>
-                    <p><i class="fas fa-terminal"></i> Full responsibility of Mkt&Com material with yearly <strong>budget of 3M euros</strong>, purchasing and stock management with <strong>20+ suppliers</strong>, and the
-    development of all related IT projects, as process improving, tools of reporting, and the implementation of related B2B/B2C platforms.
+                    <p><i class="fas fa-terminal"></i> Full responsibility of Mkt&Com material with yearly <strong>budget of 2M euros</strong>, purchasing and stock management with <strong>20+ suppliers</strong>. In charge of the
+    development of related IT projects, as process improving, tools of reporting, data management, and participate to the implementation of related B2B/B2C platforms.
                     </p>
                     <h4 class="py-3">Main Achievements:</h4>
                     <ul>
-                      <li>Built a full internal process for POSM management globally from zero and pushed all business units to get
+                      <li>Built an internal process for POSM management globally from zero and pushed all business units to get
     aligned. From product master data cleaning, segmentation, to new process/tools implementation, in order to
     guarantee the future master data input quality;</li>
                       <li class="pt-2">Reduced 30% of POSM stock level & annual spends, created reports to help business units to improve their
@@ -600,13 +603,6 @@ machinery department, plus all kinds of home-electric-appliance, and other house
                 </div>
                 <!-- end of contacts -->
             <!-- jotform embed endup here  -->
-
-<!--             <iframe id="inlineFrameExample"
-              title="Inline Frame Example"
-              width="300"
-              height="200"
-              src="https://bikery.herokuapp.com">
-            </iframe> -->
 
 
     </div>
