--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             <div id="project1" class="mt-5">
               <a href="http://www.commithood.com" target="_blank"><div class="project-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601938428/commit_hood_full_voxana.png')"></div></a>
               <div id="project1-info">
-                <p>Make a commitment to improve your neighborhood a good common space to live 🌈. </p>
-                <p>Commit'hood is a platform we coded as the final project during Le wagon bootcamp, which allows you to find all the associative events close to you.</p>
+                <p>Make a commitment to improve your neighborhood! </p>
+                <p>Commit'hood is a platform I coded with 3 teamates as the final project during Le wagon bootcamp. It allows you to find all the associative events close to you 🌈.</p>
               </div>
             </div>
 
