--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
       </a>
 <!--       <ul class="navbar-nav mr-3">
         <li class="nav-item "> -->
-      <div class="toggle-holder"><a href="#">
+      <div class="toggle-holder">
         <div id="toggle" class="mr-3">
           <div></div>
           <div></div>
           <div></div>
-        </div></a>
+        </div>
       </div>
 <!--         </li>
       </ul> -->
@@ -96,7 +96,7 @@
             <p>
               I am curious, passionate, empathic, pragmatic and autonomous, a fast learner with full energy, self-motivated and performance-driven type! And I believe my mixed experiences from different industries can bring you extra values.
             </p>
-            <p>I also love : ✈️ 🎒 🌏 🍜 🍻 🍕 🍱 🎶 🎧 🎸 🧘🏻‍♀️🚂 🏖 🎮 🚲 🕹 🍷 🏓 🎤 🏔 🎿 🐳</p>
+            <p>I also love: ✈️ 🎒 🌏 🍜 🍻 🍕 🍱 🎶 🎧 🎸 🧘🏻‍♀️🚂 🏖 🎮 🚲 🕹 🍷 🏓 🎤 🏔 🎿 🐳</p>
 
           </div>
           <!-- end of home and about  -->
@@ -185,12 +185,14 @@
                 <div class="skill-tab mr-3 mb-3"><svg class="mr-2" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#673ab7" d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5 V37z"/><path fill="#fff" d="M33.03,25.6c-0.65-0.9-1.59-1.52-2.8-1.85c0,0,1.02-0.37,1.94-1.75c0.55-0.88,0.83-1.94,0.83-3.18 c0-2.15-0.78-3.8-2.34-4.93C29.1,12.76,27.34,12,24.35,12H15v24h10.43c2.83-0.02,4.96-0.63,6.41-1.8c1.44-1.19,2.16-2.95,2.16-5.3 C34,27.6,33.68,26.5,33.03,25.6z M21,16c0,0,4.17,0,4.25,0c1.52,0,2.75,1.23,2.75,2.75c0,1.52-1.23,2.75-2.75,2.75 c-0.08,0-4.25,0-4.25,0V16z M26,32h-5v-6h5c1.66,0,3,1.34,3,3C29,30.66,27.66,32,26,32z"/></svg>Bootstrap</div>
                 <div class="skill-tab mr-3 mb-3"><svg class="mr-2" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#7e57c2" d="M7,41L7,7c0-2.209,1.791-4,4-4h26c2.209,0,4,1.785,4,3.994c0,8.018,0,25.991,0,34.01C41,43.214,39.209,45,37,45H11C8.791,45,7,43.209,7,41z"/><path fill="#fff" d="M28.292,39.221v-16.68c0,0,1.085-3.991-13.364,1.633c-0.026,0.071-0.026-15.424-0.026-15.424l4.721-0.029v9.928c0,0,13.218-5.206,13.218,3.948v16.623L28.292,39.221L28.292,39.221L28.292,39.221z M30.982,14.73h-5.007c1.802-2.204,3.434-5.98,3.434-5.98h5.178C34.586,8.751,33.7,11.211,30.982,14.73L30.982,14.73L30.982,14.73z M14.987,39.192v-9.498l4.75,4.75L14.987,39.192L14.987,39.192z"/></svg>Heroku</div>
                 <div class="skill-tab mr-3 mb-3"><svg class="mr-2" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="30px" height="30px"><path fill="#0277BD" d="M24.047,5c-1.555,0.005-2.633,0.142-3.936,0.367c-3.848,0.67-4.549,2.077-4.549,4.67V14h9v2H15.22h-4.35c-2.636,0-4.943,1.242-5.674,4.219c-0.826,3.417-0.863,5.557,0,9.125C5.851,32.005,7.294,34,9.931,34h3.632v-5.104c0-2.966,2.686-5.896,5.764-5.896h7.236c2.523,0,5-1.862,5-4.377v-8.586c0-2.439-1.759-4.263-4.218-4.672C27.406,5.359,25.589,4.994,24.047,5z M19.063,9c0.821,0,1.5,0.677,1.5,1.502c0,0.833-0.679,1.498-1.5,1.498c-0.837,0-1.5-0.664-1.5-1.498C17.563,9.68,18.226,9,19.063,9z"/><path fill="#FFC107" d="M23.078,43c1.555-0.005,2.633-0.142,3.936-0.367c3.848-0.67,4.549-2.077,4.549-4.67V34h-9v-2h9.343h4.35c2.636,0,4.943-1.242,5.674-4.219c0.826-3.417,0.863-5.557,0-9.125C41.274,15.995,39.831,14,37.194,14h-3.632v5.104c0,2.966-2.686,5.896-5.764,5.896h-7.236c-2.523,0-5,1.862-5,4.377v8.586c0,2.439,1.759,4.263,4.218,4.672C19.719,42.641,21.536,43.006,23.078,43z M28.063,39c-0.821,0-1.5-0.677-1.5-1.502c0-0.833,0.679-1.498,1.5-1.498c0.837,0,1.5,0.664,1.5,1.498C29.563,38.32,28.899,39,28.063,39z"/></svg>Python</div>
-                <div class="skill-tab mr-3 mb-3"><img class="mr-2" src="./src/media/icons8-sql-48.png" alt="">SQL</div>
+                <div class="skill-tab mr-3 mb-3"><img class="mr-2" src="./src/media/icons8-sql-48.png" alt="SQL">SQL</div>
+                <div class="skill-tab mr-3 mb-3"><img class="mr-2" src="https://seeklogo.com/images/F/figma-logo-E4E21D3AEA-seeklogo.com.png" alt="Figma">Figma</div>
+                <div class="skill-tab mr-3 mb-3"><img class="mr-2" src="https://img.icons8.com/color/48/000000/adobe-illustrator.png" alt="Illustrator">Illustrator</div>
                 <div class="skill-tab mr-3 mb-3"><img class="mr-2" src="./src/media/icons8-sap-48.png" alt="">SAP</div>
                 <div class="skill-tab mr-3 mb-3"><img class="mr-2" src="./src/media/icons8-tableau-software-48.png" alt="Tableau">Tableau</div>
                 <div class="skill-tab mr-3 mb-3"><img class="mr-2" src="https://img.icons8.com/color/48/000000/jira.png" alt="Jira">Jira</div>
                 <div class="skill-tab mr-3 mb-3"><img class="mr-2" src="https://img.icons8.com/fluent/48/000000/confluence.png" alt="Confluence">Confluence</div>
-
+                <div class="skill-tab mr-3 mb-3"><img class="mr-2" src="https://img.icons8.com/color/48/000000/ableton.png" alt="Confluence">Ableton 9</div>
               </div>
               <!-- end web dev skill -->
 
