--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="intro" id="home">
             <div class="intro-text">
               <h1 class=""> Hello, I'm<br> Yizhu Zong </h1>
-              <p class="introduction">A former buyer, now coming back as a <strong> Full-stack web developer </strong> equipped with <i class="fas fa-gem"></i> Ruby on rails, <i class="fab fa-js"></i> javascript, <i class="far fa-file-code"></i> HTML, <i class="fab fa-css3"></i> CSS, <i class="fab fa-bootstrap"></i> Bootstrap, and more...</p>
+              <p class="introduction">Freshly certificated as junior <strong> Full-stack web developer </strong> from <a href="https://www.lewagon.com/">Le Wagon <img src="https://dwj199mwkel52.cloudfront.net/assets/lewagon-logo-square-b6124eb974be375884558e4464efce48a9b5664f18422768156364363ecdd1fc.png" alt="wagon"></a> batch #441, I am Looking forward to work with interesting people, to build amazing products together, and to keep learning and evolving for a lifetime! </p>
             </div>
           </div>
 
@@ -91,10 +91,10 @@
             <h2 >About</h2>
             <div class="space-line"></div>
             <p class="mt-5">
-              Freshly certificated as a junior <strong>Full-stack developer</strong> from le Wagon summer coding bootcamp #batch-441. After 15 years of professional experience in international business development field as a buyer, I wanted to make a change of my career, to learn new skills and to follow my passion of internet technologies. Start over from zero is not a simple decision, but a new adventure is always very exciting to me, and learning new things keeps me young and fresh!
+              After 15 years of professional experience in international business development field as a buyer, I wanted to make a change of my career, to learn new skills and to follow my passion of internet technologies. That's why I began to learn coding, and decided to join <a href="https://www.lewagon.com/">le Wagon</a> bootcamp this summer to become a <strong>Full-stack developer</strong>. Start over from zero is not an easy decision, but a new adventure is always very exciting to me, and learning new things keeps my mind young and sharp!
             </p>
             <p>
-              I am curious, passionate, empathic, pragmatic and autonomous, a fast learner with full energy, self-motivated and performance-driven type! And I believe my mixed experiences from different industries can bring you extra values.
+              I am curious, passionate, empathic, pragmatic and autonomous, a fast learner with full energy, self-motivated and performance-driven type! And I believe my <strong>mixed experiences</strong> from <strong>different industries</strong>, and my <strong>multicultural background</strong> can also bring you extra precious values.
             </p>
             <p>I also love: ✈️ 🎒 🌏 🍜 🍻 🍕 🍱 🎶 🎧 🎸 🧘🏻‍♀️🚂 🏖 🎮 🚲 🕹 🍷 🏓 🎤 🏔 🎿 🐳</p>
 
