--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
             <br>
             <h5 class="my-4">Professional Behaviors</h5>
-            <div class="behavior pt-3 ml-3">
+            <div class="behavior mt-3ml-3">
               <div class="progress-item d-flex flex-row justify-content-between">
                 <div class="progress mt-3 col-10">
                   <div class="progress-bar" role="progressbar" style="width: 81%" aria-valuenow="81" aria-valuemin="0" aria-valuemax="100">Enterprising, triggers innovations</div>
@@ -250,6 +250,7 @@
                 <span class="col-2">&nbsp&nbsp&nbsp74%</span>
               </div>
             </div>
+            <p class="ml-3 mt-3" style="font-size: 12px">* Skills assessment's test result from <a href="https://www.talentoday.com/en/">talentoday.com</a></p>
 
           </div>
 
