--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="intro" id="home">
             <div class="intro-text">
               <h1 class=""> Hello, I'm<br> Yizhu Zong </h1>
-              <p class="introduction">Freshly certificated as junior <strong> Full-stack web developer </strong> from <a href="https://www.lewagon.com/">Le Wagon <img src="https://dwj199mwkel52.cloudfront.net/assets/lewagon-logo-square-b6124eb974be375884558e4464efce48a9b5664f18422768156364363ecdd1fc.png" alt="wagon"></a> batch #441, I am Looking forward to work with interesting people, to build amazing products together, and to keep learning and evolving for a lifetime! </p>
+              <p class="introduction">Freshly certificated as junior <strong> Full-stack web developer </strong> from <a href="https://www.lewagon.com/">Le Wagon <img src="https://dwj199mwkel52.cloudfront.net/assets/lewagon-logo-square-b6124eb974be375884558e4464efce48a9b5664f18422768156364363ecdd1fc.png" loading="lazy" alt="wagon" width = "30px"></a> batch #441, I am Looking forward to work with interesting people, to build amazing products together, and to keep learning and evolving for a lifetime! </p>
             </div>
           </div>
 
