--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <!-- navbar wagon style with dropdown -->
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand" href="https://agnes-lain.github.io/cv_yizhu_zong/">
         <i class="fas fa-terminal"></i> YIZHU ZONG
       </a>
       <!-- this is the button for open de dropdown menu -->
