add a new project

--- a/index.html
+++ b/index.html
@@ -148,6 +148,15 @@
             <h2>Projects</h2>
             <div class="space-line-light"></div>
 
+            <div id="project0" class="mt-5">
+              <a href="https://gameclan.herokuapp.com/" target="_blank"><div class="project0-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1607588925/gamebook_home_c2oxcg.png')"></div>
+                <div id="project0-info">
+                  <p>Create your own Gamebook to share and to play with your friends! </p>
+                  <p> An web application based on rails, Stimulusjs ajax technics, and Rawg-API. It used websocket/channels for chatroom feature🕹.</p>
+                </div>
+              </a>
+            </div>
+
             <div id="project1" class="mt-5">
               <a href="http://www.commithood.com" target="_blank"><div class="project-img" style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('https://res.cloudinary.com/diczuc7me/image/upload/v1601938428/commit_hood_full_voxana.png')"></div>
                 <div id="project1-info">
